Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
Description
reactos-bootcd-0.4.15-dev-6546-gaa719b9-x86-gcc-lin-dbg
- Open an image in Picture Viewer (to prevent right access)
- Open same image in Paint
- Paste To => Original file
Error message is displayed twice
Expected result : displayed once
Attachments
Issue Links
- blocks
-
CORE-19094 mspaint: Refactor and improve Part 2
-
- Resolved
-
- relates to
-
CORE-19182 Paint - Paste From - Error message displayed "twice" when fails
-
- Resolved
-