base/applications/mspaint/history.cpp
@@ -261,27 +261,41 @@ void ImageModel::Clamp(POINT& pt) const
 
 HBITMAP ImageModel::CopyBitmap()
 {
-    // NOTE: An app cannot select a bitmap into more than one device context at a time.
-    ::SelectObject(m_hDrawingDC, m_hbmOld); // De-select
-    HBITMAP ret = CopyDIBImage(m_hBms[m_currInd]);
-    m_hbmOld = ::SelectObject(m_hDrawingDC, m_hBms[m_currInd]); // Re-select
+    HBITMAP hBitmap = LockBitmap();
+    HBITMAP ret = CopyDIBImage(hBitmap);
+    UnlockBitmap(hBitmap);
     return ret;
 }
 
 BOOL ImageModel::IsBlackAndWhite()
 {
-    ::SelectObject(m_hDrawingDC, m_hbmOld); // De-select
-    BOOL bBlackAndWhite = IsBitmapBlackAndWhite(m_hBms[m_currInd]);
-    m_hbmOld = ::SelectObject(m_hDrawingDC, m_hBms[m_currInd]); // Re-select
+    HBITMAP hBitmap = LockBitmap();
+    BOOL bBlackAndWhite = IsBitmapBlackAndWhite(hBitmap);
+    UnlockBitmap(hBitmap);
     return bBlackAndWhite;
 }
 
 void ImageModel::PushBlackAndWhite()
 {
-    ::SelectObject(m_hDrawingDC, m_hbmOld); // De-select
-    HBITMAP hNewBitmap = ConvertToBlackAndWhite(m_hBms[m_currInd]);
-    m_hbmOld = ::SelectObject(m_hDrawingDC, m_hBms[m_currInd]); // Re-select
+    HBITMAP hBitmap = LockBitmap();
+    HBITMAP hNewBitmap = ConvertToBlackAndWhite(hBitmap);
+    UnlockBitmap(hBitmap);
 
     if (hNewBitmap)
         PushImageForUndo(hNewBitmap);
+}
+
+HBITMAP ImageModel::LockBitmap()
+{
+    // NOTE: An app cannot select a bitmap into more than one device context at a time.
+    ::SelectObject(m_hDrawingDC, m_hbmOld); // De-select
+    HBITMAP hbmLocked = m_hBms[m_currInd];
+    m_hBms[m_currInd] = NULL;
+    return hbmLocked;
+}
+
+void ImageModel::UnlockBitmap(HBITMAP hbmLocked)
+{
+    m_hBms[m_currInd] = hbmLocked;
+    m_hbmOld = ::SelectObject(m_hDrawingDC, hbmLocked); // Re-select
 }
